[gd_scene load_steps=18 format=3 uid="uid://b1m4qj55htbli"]

[ext_resource type="Script" uid="uid://bvs70das1cb57" path="res://scenes/ui/pause_menu_with_confirm.gd" id="1_808v6"]
[ext_resource type="PackedScene" uid="uid://77buhb1awwg3" path="res://scenes/ui/show_controls_screen.tscn" id="2_nxb7a"]
[ext_resource type="PackedScene" uid="uid://cr76tloydxhqv" path="res://scenes/ui/show_options_screen.tscn" id="3_jxkg5"]
[ext_resource type="Theme" uid="uid://ch4ic0feakt4r" path="res://assets/themes/default_theme.tres" id="4_naved"]
[ext_resource type="PackedScene" uid="uid://b7jbkkvivmc7c" path="res://scenes/ui/sound_button.tscn" id="5_rgoli"]
[ext_resource type="PackedScene" uid="uid://da10yhbdl8klh" path="res://assets/particles/continue_particles.tscn" id="6_g8vkw"]
[ext_resource type="Material" uid="uid://dxac3sbue2ygf" path="res://assets/particles/continue_particle_process_material.tres" id="7_xcfjs"]

[sub_resource type="Animation" id="Animation_fu5m3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ijkb4"]
resource_name = "auto"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"focus_first_available_choice"
}, {
"args": [],
"method": &"animation_player_play_restore"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"is_fully_opened"
}]
}

[sub_resource type="Animation" id="Animation_buwwf"]
resource_name = "out"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7k7h4"]
resource_name = "restore"
length = 2.0
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer:theme_override_constants/margin_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 36, 32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_buwwf"]
_data = {
&"RESET": SubResource("Animation_fu5m3"),
&"auto": SubResource("Animation_ijkb4"),
&"out": SubResource("Animation_buwwf"),
&"restore": SubResource("Animation_7k7h4")
}

[sub_resource type="Theme" id="Theme_808v6"]

[sub_resource type="Animation" id="Animation_k4mhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="Animation" id="Animation_moutl"]
resource_name = "restorebuttonshimmer"
length = 5.0
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RestoreMarginContainer/RestoreButton:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.568627, 0.647059, 0.858824, 1), Color(0.5676, 0.86, 0.767407, 1), Color(0.7138, 0.86, 0.5676, 1), Color(0.86, 0.630953, 0.5676, 1), Color(0.86, 0.5676, 0.782027, 1), Color(0.568627, 0.647059, 0.858824, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k4mhs"]
_data = {
&"RESET": SubResource("Animation_k4mhs"),
&"restorebuttonshimmer": SubResource("Animation_moutl")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37tmq"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.11, 0.11, 0.11, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PauseMenuWithConfirm" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_808v6")
show_controls_screen = ExtResource("2_nxb7a")
show_options_screen = ExtResource("3_jxkg5")
confirmation_timer_base_waittime = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_buwwf")
}
autoplay = "auto"

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = SubResource("Theme_808v6")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
process_mode = 3
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("4_naved")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Menu" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer"]
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
process_mode = 3
layout_mode = 2
theme_override_constants/outline_size = 14
text = "PAUSED"
horizontal_alignment = 1

[node name="Choices" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_constants/separation = 8

[node name="RestoreMarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="RestoreAnimationPlayer" type="AnimationPlayer" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_k4mhs")
}
autoplay = "restorebuttonshimmer"

[node name="RestoreButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.568627, 0.647059, 0.858824, 1)
layout_mode = 2
text = "REVIVE"

[node name="Node2D" type="Node2D" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer/RestoreButton"]
position = Vector2(-25.78, 16.17)

[node name="ContinueParticles" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices/RestoreMarginContainer/RestoreButton/Node2D" instance=ExtResource("6_g8vkw")]
process_material = ExtResource("7_xcfjs")

[node name="ResumeButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RESUME"

[node name="ControlsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "CONTROLS"

[node name="OptionsButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "OPTIONS"

[node name="RestartButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RETRY"

[node name="LeaveButton" parent="MarginContainer/PanelContainer/MarginContainer/PanelContainer/MarginContainer/Menu/Choices" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="ConfirmSelectionMenu" type="MarginContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/ConfirmSelectionMenu"]
layout_mode = 2
color = Color(0.19251, 0.15660001, 0.27, 0.6509804)

[node name="ConfirmSelectionPanel" type="PanelContainer" parent="MarginContainer/ConfirmSelectionMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_naved")
theme_override_styles/panel = SubResource("StyleBoxFlat_37tmq")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ConfirmSelectionMenu/ConfirmSelectionPanel"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/ConfirmSelectionMenu/ConfirmSelectionPanel/VBoxContainer"]
layout_mode = 2
text = "ARE YOU SURE?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ConfirmSelectionMenu/ConfirmSelectionPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ConfirmSelectionNoSoundButton" parent="MarginContainer/ConfirmSelectionMenu/ConfirmSelectionPanel/VBoxContainer/HBoxContainer" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../ConfirmSelectionYesSoundButton")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = "NO"

[node name="ConfirmSelectionYesSoundButton" parent="MarginContainer/ConfirmSelectionMenu/ConfirmSelectionPanel/VBoxContainer/HBoxContainer" instance=ExtResource("5_rgoli")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../ConfirmSelectionNoSoundButton")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = "YES"
